--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
                 <div class="card">
 
-                    <h1 class="card-header info-color white-text text-center py-4 text-center h2 mb-4">Calculador de IMC
+                    <h1 class="card-header blue-gradient white-text text-center py-4 text-center h2 mb-4">Calculador de IMC
                     </h1>
 
-                    <div class="card-body px-lg-5 pt-0">
+                    <div class="card-body px-5 pt-0">
 
                         <form name="form" id="form">
 
@@ -38,19 +38,19 @@
 
                             <div class="row">
                                 <div class="col-lg-6 col-12 mb-2">
-                                    <button type="submit" class="btn btn-info btn-block waves-effect">Calcular</button>
+                                    <button type="submit" class="btn blue-gradient btn-block waves-effect">Calcular <i class="fas fa-check"></i></button>
                                 </div>
                                 <div class="col-lg-6 col-12">
                                     <button id="btnReset" type="reset"
-                                        class="btn btn-warning btn-block waves-effect">Zerar</button>
+                                        class="btn purple-gradient btn-block waves-effect">Zerar <i class="fas fa-times"></i></button>
                                 </div>
                             </div>
 
-                            <div class="mt-5" id="showResult"></div>
+                            <div class="mt-5" class="mt-3" id="showResult"></div>
 
                             <div class="row">
                                 <div class="col text-center">
-                                    <p class="mt-5 mb-0 text-grey">Desenvolvido por <strong>Ernane Toledo</strong></p>
+                                    <p class="mt-2 mb-0 text-grey">Desenvolvido por <strong>Ernane Toledo</strong></p>
                                     <a href="https://linkedin.com.br/in/ernanetoledo" title="Acesse meu Linkedin" target="_blank"
                                         class="btn-sm text-info">
                                         <i class="fab fa-linkedin-in"></i>
