alterado links redes sociais

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                             <div class="row">
                                 <div class="col text-center">
                                     <p class="mt-2 mb-0 text-grey">Desenvolvido por <strong>Ernane Toledo</strong></p>
-                                    <a href="https://linkedin.com.br/in/ernanetoledo" title="Acesse meu Linkedin" target="_blank"
+                                    <a href="https://www.linkedin.com/in/ernanetoledo/" title="Acesse meu Linkedin" target="_blank"
                                         class="btn-sm text-info">
                                         <i class="fab fa-linkedin-in"></i>
                                     </a>
-                                    <a href="https://github.com/ernaneaugusto" title="Ver projeto no Github" target="_blank"
+                                    <a href="https://github.com/ernaneaugusto/js-calculador-imc" title="Ver projeto no Github" target="_blank"
                                         class=" btn-sm text-dark">
                                         <i class="fab fa-github"></i>
                                     </a>
